sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: '(' expected but identifier found.
  while !estTriee {
        ^AlgBubbleSort1:15: error: illegal start of simple expression
} 
^